# LangChain_Basics

./: NOTES.TXT  README.md  example.env  main.py  notes2.txt  pyproject.toml
